# advance-RAG

./: .gitignore
02-Parallel-Query(Fan-Out)/: parallel_query.py
1-basic-RAG/: docker-compose.db.yml  embedder.py  ingest.py  main.py  requirements.txt  retriever.py
1-basic-RAG/Data/: system_prompt.txt
1-basic-RAG/Tools/: nodejs_qa.py
2-Parallel-Query(Fan-out)/: ingest.py  main.py  pyproject.toml
3-Reciprocal-Rank-Fusion/: embedder.py  ingest.py  main.py  pyproject.toml  reciprocal_rank_fusion.py  retriever.py
3-Reciprocal-Rank-Fusion/data/: system_prompt.txt
4-Query-Decomposition-CoT/: ingest.py  main.py  pyproject.toml  query_decomposition.py
4-Query-Decomposition-CoT/data/: system_prompt.txt
6-Hypothetical-Document-Embedding-HyDE/: HyDE.py  ingest.py  main.py  pyproject.toml  retriever.py
6-Hypothetical-Document-Embedding-HyDE/Data/: system_prompt.txt
7-Logical_Routing/: HyDE.py  main.py  pyproject.toml
8-Semantic-Routing/: embedder.py  ingest.py  main.py  pyproject.toml  router.py
8-Semantic-Routing/Data/: system_prompt.txt
